kubectl/soularr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soularr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soularr
  template:
    metadata:
      labels:
        app: soularr
    spec:
      containers:
        - name: soularr
          image: mrusse08/soularr:latest            
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /data
              name: nfs
              subPath: applications/soularr/volumes/data
            - mountPath: /downloads
              name: nfs
              subPath: applications/qbittorrent-nox/volumes/downloads/music
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: soularr-service
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: soularr
  ports:
    - name: http
      port: 5025
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soularr-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - soularr.joeberry.org
  rules:
  - host: soularr.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
